# macro-playground

./: Cargo.toml  README.md
src/: lib.rs
tests/: method.rs
